Fixed gap inconsistancy

--- a/src/assets/css/header/header.css
+++ b/src/assets/css/header/header.css
@@ -5,6 +5,7 @@ header {
   background: var(--header-bg);
   color: var(--header-text);
   margin: 0;
+  padding: 0;
   font-size: 16px;
   max-height: 75px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
@@ -22,7 +23,7 @@ header {
 nav {
   display: flex; 
   align-items: center; 
-  padding: 15px 15px;
+  padding: 10px 15px;
   justify-content: space-between; 
 }
 
